scale .8 to media < 340 added

--- a/style.css
+++ b/style.css
@@ -11,10 +11,15 @@
   width: 100vw;
   height: 100vh;
 }
+@media screen and (max-width: 340px) {
+  #threesixfive {
+    transform: scale(0.8);
+  }
+}
 
 #counter {
   position: relative;
-  font: 6rem 'counter-dial';
+  font: 7.5rem 'counter-dial';
   color: black;
   margin: 2rem 0 0;
 }
