--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ p {
   font-weight: 900;
   color: white;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+  animation: 1s ease-in all;
 }
 
 .hide {
@@ -66,4 +67,5 @@ p {
   pointer-events: none !important;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
   background: lightgray !important;
+  animation: 1s ease-in all;
 }
